fix product gallery spacing values

--- a/sass/shop/_single-product.scss
+++ b/sass/shop/_single-product.scss
@@ -51,9 +51,7 @@
 			}
 
 			.flex-viewport {
-				margin-bottom: 2.7rem;
-				//height: auto !important;
-				//max-height: 660px;
+				margin-bottom: 30px;
 			}
 
 			.flex-control-thumbs {
@@ -65,7 +63,7 @@
 					cursor: pointer;
 					float: left;
 					font-size: 0;
-					padding: 0 15px 15px;
+					padding: 0 15px 30px;
 
 					img {
 						opacity: 0.5;
